# Lexer

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  run_optimizer.sh  sample.mst  valid.snek
examples/: abc.mst  example_basic.rs  example_character_range.rs  example_invalid.rs  example_output_file.rs  example_pretty_error.rs  example_read_mst_file.rs  example_save_fa.rs  example_save_load_scanner.rs  example_skip_category.rs  example_skip_whitespace.rs  example_visualize_dfa.rs  example_visualize_minimal_dfa.rs  example_visualize_nfa.rs
src/: dfa.rs  fa.rs  lib.rs  main.rs  nfa.rs  reg_ex.rs  regex.rs  scanner.rs  visualizer.rs
test_data/: atleast_atmost.mst  atleast_atmost.snek  buffer_test_text.txt  comments.mst  comments.snek  ebnf.mst  empty.mst  everything.mst  everything_scanner.scn  range.mst  range.snek  range_invalid.mst  range_invalid.snek  sample.mst  string_constant.mst  valid.snek
tests/: integration_tests.rs  success_tests.txt
