[package]
name = "lexviz"
version = "1.0.0"
edition = "2021"
description = """A customizable lexical analyser tool which also allows you to visualize the NFAs and DFAs generated."""
authors = ["Nagendra Kumar Jamadagni <nagendrajamadagni@gmail.com>"]
license = "MIT"
keywords = ["compiler", "lexer", "lexical-analyser", "visualize", "finite-automata"]
categories = ["compilers"]
readme = "README.md"
repository = "https://github.com/nagendrajamadagni/Lexer"

[dependencies]
petgraph = "0.7"
dot = "0.1"
bitvec = {version = "1.0.1", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
egui_graphs = "0.24.0"
egui = "0.31.1"
eframe = "0.31.1"
color-eyre = "0.6.3"
serde = "1.0.219"
serde_json = "1.0.140"

[lib]
name = "lexviz"
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = true
proc-macro = false
crate-type = ["lib"]
required-features = []

[[bin]]
name = "lexviz"
path = "src/bin/lexviz.rs"
test = true
bench = false
required-features = []
